--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <div class="profile">
       <img src="images/freyaPic.png" alt="freya's picture" width="200" height="200">
       <h2>Hello.</h2>
-      <p class="self-intro">My name is Xin Xiang. I am a junior student majoring in Computer Science at New York University. I love designing, eating, and of course, coding!.</p>
+      <p class="self-intro">My name is Xin Xiang. You can just call me Freya! I am a sophomore majoring in Computer Science at New York University. Previously I have been spending two years majoring in Japanese at Sun Yat-sen University in China. 
+        I love designing, eating, and of course, coding!</p>
     </div>
 
     <hr>
@@ -32,13 +33,13 @@
       <h2>What I can do.</h2>
       <div class="skill-row">
         <img class="skill-img1" src="images/new1.png" alt="web_picture">
-        <h3>Web Design</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <h3>Java Development</h3>
+        <p>I am confident in Java programming. I am familiar with Java topics like OOP, Collections, Concurrency, etc.</p>
       </div>
       <div class="skill-row">
         <img class="skill-img2" src="images/new2.png" alt="ios_picture">
-        <h3>iOS Development</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <h3>Language Learning</h3>
+        <p>I can speak three languages, which are Mandarin, English and Japnanse. I am also slowly picking up Spanish and Korean.</p>
       </div>
     </div>
 
@@ -46,8 +47,8 @@
 
     <div class="contact-me">
       <h2>Get In Touch.</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>Feel free to contact me if we have similar interests!</h3>
+      <p>We can make programming projects, learn a new language, or just have fun together!</p>
       <a href="xiangxin0511@gmail.com" class="btn">Click here to message me</a>
     </div>
   </div>
